Switch email logo to png

--- a/template-invite.html
+++ b/template-invite.html
@@ -323,7 +323,7 @@
               <!-- START MAIN CONTENT AREA -->
               <tr>
                 <td class="wrapper">
-                  <img src="{{ .SiteURL }}/img/branding/email/top-logo.svg" />
+                  <img src="{{ .SiteURL }}/img/branding/email/top-logo.png" />
                   <p>Hello from Cove Studio</p>
                   <p>
                     You have been invited to create a Cove Studio account at {{
