--- a/template-reset.html
+++ b/template-reset.html
@@ -321,7 +321,7 @@
               <!-- START MAIN CONTENT AREA -->
               <tr>
                 <td class="wrapper">
-                  <img src="{{ .SiteURL }}/img/branding/email/top-logo.svg" />
+                  <img src="{{ .SiteURL }}/img/branding/email/top-logo.png" />
                   <p>Hello from Cove Studio</p>
                   <p>
                     You have requested your password reset for your Cove Studio
